# statistics_lib

./: .gitignore  .gitmodules  Dependencies.md  README.md  Release log.md  __init__.py  base_functions.py  check_dependencies.py  data_classes.py  dependencies.json  distribution_classes.py  inverse_distributions.py  ordered_functions.py  setup.cfg  special_functions.py  stat_tests.py
Documents/: index.md
Documents/Design/: DE000_library_design.md  DE001_order_related.md  DE002_continuous_distributions.md  DE003_special_functions.md  DE004_inverse_distributions.md  DE005_statistical_tests.md  index.md
Documents/References/: UD000_statistics_lib.md  UD001_base_functions.md  UD002_ordered_functions.md  UD003_data_classes.md  UD004_distribution_classes.md  UD005_special_functions.md  UD006_inverse_distributions.md  UD007_stat_tests.md  index.md
Documents/Requirements/: RE000_library_requirements.md  RE001_base_functions.md  RE002_ordered_functions.md  RE003_data_classes.md  RE004_distribution_classes.md  RE005_special_functions.md  RE006_inverse_distributions.md  RE007_stat_tests.md  index.md
Documents/Tests/: TE000_library_test_report.md  TE001_base_functions.md  index.md  (+8 more)
Tests/: DT003_data_classes.py  DT004_distribution_classes.py  DT004_test_results.txt  DT006_inverse_distributions.py  DT006_test_results.txt  DT007_stat_tests.py  DT007_test_results.txt  Test_statistics_base.ods  UT001_base_functions.py  UT002_ordered_functions.py  UT003_data_classes.py  UT004_distribution_classes.py  UT005_special_function.py  UT006_inverse_distributions.py  UT007_stat_tests.py
(+53 files in other folders)
