[metadata]
name = statistics_lib
version = 1.1.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Statistical analysis on values with the measurement uncertainty
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/statistics_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    statistics_lib =
packages = statistics_lib, statistics_lib.Tests
install_requires =
    introspection_lib >= 0.4
    phyqus_lib >= 0.1
    math_extra_lib >= 0.1

[options.package_data]
* = dependencies.json
